containers/kubernetes/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: nrocinu
spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
