containers/kubernetes/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: nrocinu
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 5G
spec:
  ingressClassName: public
  rules:
    - host: pgadmin.optirec.ml
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
  tls:
    - secretName: tls-secret
